--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -6,61 +6,56 @@
         xmlns:local="clr-namespace:ZooKeeper0WPF"
         mc:Ignorable="d"
         Title="MainWindow" Width="1200" Height="800">
-    <StackPanel Orientation="Vertical" HorizontalAlignment="Center">
-        <StackPanel Orientation="Horizontal">
-            <TextBlock FontSize="24" Text="Add Zones:" />
-            <Border BorderThickness="1" BorderBrush="Black">
-                <TextBlock x:Name="DownButton" FontSize="36" Text="⏬" Width="50" Height="50" MouseDown="Down_Button_Clicked" />
-            </Border>
-            <Border BorderThickness="1" BorderBrush="Black">
-                <TextBlock x:Name="RightButton" FontSize="36" Text="⏩" Width="50" Height="50" MouseDown="Right_Button_Clicked" />
-            </Border>
-        </StackPanel>
-        <StackPanel Orientation="Horizontal">
-            <TextBlock FontSize="24" Text="Add Animal to Holding:" />
-            <Border BorderThickness="1" BorderBrush="Black">
-                <TextBlock x:Name="CatButton" FontSize="36" Text="🐱" Width="50" Height="50" MouseDown="Cat_Button_Clicked" />
-            </Border>
-            <Border BorderThickness="1" BorderBrush="Black">
-                <TextBlock x:Name="MouseButton" FontSize="36" Text="🐭" Width="50" Height="50" MouseDown="Mouse_Button_Clicked" />
-            </Border>
-        </StackPanel>
-        <StackPanel Orientation="Horizontal">
-            <TextBlock FontSize="24" Text="Holding Pen:" />
-            <Border x:Name="HoldingPen" BorderThickness="1" BorderBrush="Black" Width="50">
-                <TextBlock  FontSize="24" Text="" Width="50" Height="50" 
+
+    <Grid x:Name="ZooGrid">
+        <Grid.RowDefinitions>
+            <RowDefinition />
+            <RowDefinition />
+            <RowDefinition />
+            <RowDefinition />
+            <RowDefinition />
+            <RowDefinition />
+            <RowDefinition />
+            <RowDefinition />
+            <RowDefinition />
+            <RowDefinition />
+            <RowDefinition />
+            <RowDefinition />
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition />
+            <ColumnDefinition />
+            <ColumnDefinition />
+            <ColumnDefinition />
+            <ColumnDefinition />
+            <ColumnDefinition />
+            <ColumnDefinition />
+            <ColumnDefinition />
+            <ColumnDefinition />
+            <ColumnDefinition />
+        </Grid.ColumnDefinitions>
+
+        <TextBlock FontSize="24" Text="Add Zones:" HorizontalAlignment="Left" VerticalAlignment="Center" TextWrapping="Wrap" />
+        <Border BorderThickness="1" BorderBrush="Black" Grid.Column="1" HorizontalAlignment="Left">
+            <TextBlock x:Name="DownButton" FontSize="36" Text="⏬" Width="50" Height="50" MouseDown="Down_Button_Clicked"  />
+        </Border>
+        <Border BorderThickness="1" BorderBrush="Black" Grid.Column="2" HorizontalAlignment="Left">
+            <TextBlock x:Name="RightButton" FontSize="36" Text="⏩" Width="50" Height="50" MouseDown="Right_Button_Clicked" />
+        </Border>
+        <TextBlock FontSize="24" Text="Add to Holding:" TextWrapping="Wrap" VerticalAlignment="Center" HorizontalAlignment="Left" Grid.Column="3" />
+        <Border BorderThickness="1" BorderBrush="Black" Grid.Column="4" HorizontalAlignment="Left">
+            <TextBlock x:Name="CatButton" FontSize="36" Text="🐱" Width="50" Height="50" MouseDown="Cat_Button_Clicked"  />
+        </Border>
+        <Border BorderThickness="1" BorderBrush="Black" Grid.Column="5" HorizontalAlignment="Left">
+            <TextBlock x:Name="MouseButton" FontSize="36" Text="🐭" Width="50" Height="50" MouseDown="Mouse_Button_Clicked" />
+        </Border>
+        <TextBlock FontSize="24" Text="Holding Pen:" TextWrapping="Wrap" HorizontalAlignment="Left" VerticalAlignment="Center" Grid.Column="6" />
+        <Border x:Name="HoldingPen" BorderThickness="1" BorderBrush="Black" Width="50" HorizontalAlignment="Left" Grid.Column="7">
+            <TextBlock FontSize="24" Text="" Width="50" Height="50" 
                             HorizontalAlignment="Center"
                             VerticalAlignment="Center"
                             TextAlignment="Center"
                             MouseDown="Cat_Button_Clicked" />
-            </Border>
-        </StackPanel>
-
-        <Grid x:Name="ZooGrid">
-            <Grid.RowDefinitions>
-                <RowDefinition />
-                <RowDefinition />
-                <RowDefinition />
-                <RowDefinition />
-                <RowDefinition />
-                <RowDefinition />
-                <RowDefinition />
-                <RowDefinition />
-                <RowDefinition />
-                <RowDefinition />
-            </Grid.RowDefinitions>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition />
-                <ColumnDefinition />
-                <ColumnDefinition />
-                <ColumnDefinition />
-                <ColumnDefinition />
-                <ColumnDefinition />
-                <ColumnDefinition />
-                <ColumnDefinition />
-                <ColumnDefinition />
-                <ColumnDefinition />
-            </Grid.ColumnDefinitions>
-        </Grid>
-    </StackPanel>
+        </Border>
+    </Grid>
 </Window>
